--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "PyMuPDF>=1.23.0",
+    "tqdm>=4.66.0",
+]
