--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "PyMuPDF>=1.23.0",
     "tqdm>=4.66.0",
+    "google-genai>=0.3.0",
+    "python-dotenv>=1.0.0",
+    "pillow>=12.1.0",
 ]
