--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "chaosrag"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+package-mode = false
 requires-python = ">=3.13,<4.0"
 dependencies = [
     "PyMuPDF>=1.23.0",
